--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,24 +13,8 @@ body {
 a {
   color: inherit;
   text-decoration: none;
-  cursor: pointer;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-a,
-p {
-}
-
-*,
-*:before,
-*:after {
+* {
   box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  -ms-box-sizing: border-box;
 }
